Fixed submit button on iOS

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -65,6 +65,7 @@
   border-radius: 0px;
   text-align: center;
   cursor: pointer;
+  -webkit-appearance: none;
 }
 .main .result {
   font-weight: bold;
